--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -18,4 +18,4 @@ systeminfo.OS=Windows 11
 system.info.Browser=Google Chrome 
 systeminfo.User=Tanu
 systeminfo.Build=1.1
-systeminfo.AppName=MSIL CRM
+systeminfo.AppName=DMS POC
