--- a/src/test/resources/browser-config.properties
+++ b/src/test/resources/browser-config.properties
@@ -1,5 +1,7 @@
 browser=chrome
 environment=uat
 devSignInurl=https://dlpwnxk3tpraq.cloudfront.net/login
-uatSignInurl=https://d3ohjjp5dewazn.cloudfront.net/login
+uatSignInurl=https://frontenduat.msilpoc.com/
 qaSignInurl=https://d208nv99xn56h8.cloudfront.net/login
+saleRegisterDownloadPath=\\Downloads\\SaleRegister
+onlineReportDownloadPath=\\Downloads\\Online
